--- a/src/app/method/method.component.scss
+++ b/src/app/method/method.component.scss
@@ -26,3 +26,17 @@ ion-card{
     border-radius: 10px;
     box-shadow: none !important;
 }
+
+p{
+    font-weight: 500;
+}
+
+span{
+    font-size: 0.9em;
+}
+
+ion-button{
+    display: block;
+    width: 300px;
+    margin: auto;
+}
