--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -60,11 +60,15 @@
   <ion-toolbar>
     <div>
       <ion-item>
-        <h2 class="item-desc3">{{'reports.currency' | translate}}: {{ this.sum | number: '1.2-2' }}</h2> 
-        <p class="item-desc3">DGB: {{ this.dgbSum | number: '1.2-6' }}</p>
-        <p class="item-desc3">LTC: {{ this.ltcSum | number: '1.2-6' }}</p>
-        <p class="item-desc3">BTC: {{ this.btcSum | number: '1.2-8' }}</p>
-        <p class="item-desc3">ETH: {{ this.ethSum | number: '1.2-8' }}</p>
+        <ion-segment scrollable>
+          <h2 class="item-desc3">{{'reports.currency' | translate}}: {{ this.sum | number: '1.2-2' }}</h2> 
+          <p class="item-desc3">DGB: {{ this.dgbSum | number: '1.2-6' }}</p>
+          <p class="item-desc3">LTC: {{ this.ltcSum | number: '1.2-6' }}</p>
+          <p class="item-desc3">BTC: {{ this.btcSum | number: '1.2-8' }}</p>
+          <p class="item-desc3">ETH: {{ this.ethSum | number: '1.2-8' }}</p>
+          <p class="item-desc3">USDT: {{ this.usdtSum | number: '1.2-2' }}</p>
+          <p class="item-desc3">USDC: {{ this.usdcSum | number: '1.2-2' }}</p>
+        </ion-segment>
       </ion-item>
       <ion-grid>
         <ion-row>
