--- a/src/app/transact/transact.page.html
+++ b/src/app/transact/transact.page.html
@@ -60,6 +60,14 @@
           <h1 class="dgb-total"><ion-spinner *ngIf="searching" name="dots"></ion-spinner>{{ this?.amount | number : '1.2-6' }}</h1>
         </ion-label>
       </ion-item>
+      <ion-item *ngIf="this.coin === 'multi-collateral-dai'" lines="none">
+        <ion-label text-center>
+          <ion-avatar slot="start">
+            <img src="../../assets/dai.png">
+          </ion-avatar>
+          <h1 class="dgb-total"><ion-spinner *ngIf="searching" name="dots"></ion-spinner>{{ this?.amount | number : '1.2-6' }}</h1>
+        </ion-label>
+      </ion-item>
       <ion-item *ngIf="this.coin === 'usd-coin'" lines="none">
         <ion-label text-center>
           <ion-avatar slot="start">
@@ -77,9 +85,9 @@
         </ion-label>
       </ion-item>
     </div>
-    <ion-card class="card ion-padding">
+    <ion-card color="light" class="card ion-padding">
       <div *ngIf="this?.amount" class="qr-code">
-        <qrcode [qrdata]="this?.uri" [size]="256" [level]="'M'" [usesvg]="true" [colordark]="'#182650'"></qrcode>
+        <qrcode [qrdata]="this?.uri" [width]="225" [errorCorrectionLevel]="'M'" [elementType]="'svg'" [colorDark]="'#182650'"></qrcode>
       </div>
       <p class="inner-card">{{'transact.click' | translate}} {{this.coin}} {{'transact.wallet' | translate}}.</p>
       <ion-spinner class="spinnerCenter" *ngIf="this.searching2" name="crescent"></ion-spinner>
