--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -64,6 +64,9 @@
         <img src="../../assets/eth.svg">
       </ion-avatar>
       <ion-avatar slot="end">
+        <img src="../../assets/dai.png">
+      </ion-avatar>
+      <ion-avatar slot="end">
         <img src="../../assets/usdt.png">
       </ion-avatar>
       <ion-avatar slot="end">
@@ -75,49 +78,51 @@
         <ion-text *ngIf="!this.ethAddress">{{'settings.tap' | translate}} Ethereum {{'settings.address' | translate}}.</ion-text>
       </ion-label>
     </ion-item>
-    <ion-item *ngIf="this.ethWyreAddress && this.btcWyreAddress" color="light">
-      <p>Wyre Settings</p>
-    </ion-item>
-    <ion-item *ngIf="this.ethWyreAddress && this.btcWyreAddress">
-      <ion-label>{{'settings.activate' | translate}} Wyre</ion-label>
-      <ion-toggle slot="end" color="primary" (ionChange)="wyreActivate()" [(ngModel)]="wyreActive" checked="true"></ion-toggle>
-    </ion-item>
-    <ion-item *ngIf="this.wyreActive && this.ethWyreLiquidAddress && this.btcWyreLiquidAddress">
-      <ion-label>{{'settings.liquidate' | translate}} Wyre</ion-label>
-      <ion-toggle slot="end" color="primary" (ionChange)="wyreLiquidate()" [(ngModel)]="autoSellWyre" checked="true"></ion-toggle>
-    </ion-item>
-    <ion-item *ngIf="this.wyreActive"> 
-      <ion-avatar slot="start">
-        <img src="../../assets/btc@2x.png">
-      </ion-avatar>
-      <ion-label>
-        <p>Bitcoin Wyre {{'settings.address' | translate}}</p>
-        <ion-text *ngIf="this.wyreActive && !this.autoSellWyre">Hold: {{ this.btcWyreAddress }}</ion-text>
-        <ion-text *ngIf="this.wyreActive && this.autoSellWyre">Liquidate: {{ this.btcWyreLiquidAddress }}</ion-text>
-      </ion-label>
-    </ion-item>
-    <ion-item *ngIf="this.wyreActive"> 
-      <ion-avatar slot="start">
-        <img src="../../assets/eth.svg">
-      </ion-avatar>
-      <ion-avatar slot="end">
-        <img src="../../assets/dai.png">
-      </ion-avatar>
-      <ion-avatar slot="end">
-        <img src="../../assets/usdc.png">
-      </ion-avatar>
-      <ion-label>
-        <p>Ethereum Wyre {{'settings.address' | translate}} & Tokens</p>
-        <ion-text *ngIf="this.wyreActive && !this.autoSellWyre" class="smallAddress">Hold: {{ this.ethWyreAddress }}</ion-text>
-        <ion-text *ngIf="this.wyreActive && this.autoSellWyre" class="smallAddress">Liquidate: {{ this.ethWyreLiquidAddress }}</ion-text>
-      </ion-label>
+    <div *ngIf="this.ethWyreAddress && this.btcWyreAddress && !this.autoSell">
+      <ion-item *ngIf="this.ethWyreAddress && this.btcWyreAddress" color="light">
+        <p>Wyre Settings</p>
+      </ion-item>
+      <ion-item *ngIf="this.ethWyreAddress && this.btcWyreAddress">
+        <ion-label>{{'settings.activate' | translate}} Wyre</ion-label>
+        <ion-toggle slot="end" color="primary" (ionChange)="wyreActivate()" [(ngModel)]="wyreActive" checked="true"></ion-toggle>
+      </ion-item>
+      <ion-item *ngIf="this.wyreActive && this.ethWyreLiquidAddress && this.btcWyreLiquidAddress">
+        <ion-label>{{'settings.liquidate' | translate}} Wyre</ion-label>
+        <ion-toggle slot="end" color="primary" (ionChange)="wyreLiquidate()" [(ngModel)]="autoSellWyre" checked="true"></ion-toggle>
+      </ion-item>
+      <ion-item *ngIf="this.wyreActive"> 
+        <ion-avatar slot="start">
+          <img src="../../assets/btc@2x.png">
+        </ion-avatar>
+        <ion-label>
+          <p>Bitcoin Wyre {{'settings.address' | translate}}</p>
+          <ion-text *ngIf="this.wyreActive && !this.autoSellWyre">Hold: {{ this.btcWyreAddress }}</ion-text>
+          <ion-text *ngIf="this.wyreActive && this.autoSellWyre">Liquidate: {{ this.btcWyreLiquidAddress }}</ion-text>
+        </ion-label>
+      </ion-item>
+      <ion-item *ngIf="this.wyreActive"> 
+        <ion-avatar slot="start">
+          <img src="../../assets/eth.svg">
+        </ion-avatar>
+        <ion-avatar slot="end">
+          <img src="../../assets/dai.png">
+        </ion-avatar>
+        <ion-avatar slot="end">
+          <img src="../../assets/usdc.png">
+        </ion-avatar>
+        <ion-label>
+          <p>Ethereum Wyre {{'settings.address' | translate}} & Tokens</p>
+          <ion-text *ngIf="this.wyreActive && !this.autoSellWyre" class="smallAddress">Hold: {{ this.ethWyreAddress }}</ion-text>
+          <ion-text *ngIf="this.wyreActive && this.autoSellWyre" class="smallAddress">Liquidate: {{ this.ethWyreLiquidAddress }}</ion-text>
+        </ion-label>
+      </ion-item>
+    </div>
+    <ion-item color="light">
+      <p>Bittrex Settings</p>
     </ion-item>
     <ion-item *ngIf="this.bittrexKey">
       <ion-label>{{'settings.auto' | translate}} Bittrex</ion-label>
       <ion-toggle slot="end" color="primary" (ionChange)="autoSellActive()" [(ngModel)]="autoSell" checked="true"></ion-toggle>
-    </ion-item>
-    <ion-item color="light">
-      <p>Bittrex Settings</p>
     </ion-item>
     <ion-item (click)="saveBittrexKey()"> 
       <ion-label>
@@ -159,6 +164,9 @@
     <ion-item *ngIf="this.autoSell && this.bittrexKey"> 
       <ion-avatar slot="start">
         <img src="../../assets/eth.svg">
+      </ion-avatar>
+      <ion-avatar slot="end">
+        <img src="../../assets/dai.png">
       </ion-avatar>
       <ion-avatar slot="end">
         <img src="../../assets/usdt.png">
