--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -66,6 +66,7 @@
           <p class="item-desc3">LTC: {{ this.ltcSum | number: '1.2-6' }}</p>
           <p class="item-desc3">BTC: {{ this.btcSum | number: '1.2-8' }}</p>
           <p class="item-desc3">ETH: {{ this.ethSum | number: '1.2-8' }}</p>
+          <p class="item-desc3">DAI: {{ this.daiSum | number: '1.2-2' }}</p>
           <p class="item-desc3">USDT: {{ this.usdtSum | number: '1.2-2' }}</p>
           <p class="item-desc3">USDC: {{ this.usdcSum | number: '1.2-2' }}</p>
         </ion-segment>
