--- a/src/app/method/method.component.html
+++ b/src/app/method/method.component.html
@@ -28,8 +28,6 @@
           <p class="start">Bitcoin</p>
           <!-- <p class="end">{{'method.select' | translate}}</p> -->
         </ion-card>
-      </ion-col>
-      <ion-col size="6">
         <ion-card (click)="selectCoin('ethereum')" text-wrap>
           <ion-avatar item-start>
             <img src="../../assets/eth.svg">
@@ -37,6 +35,8 @@
           <p class="start">Ethereum</p>
           <!-- <p class="end">{{'method.select' | translate}}</p> -->
         </ion-card>
+      </ion-col>
+      <ion-col size="6">
         <ion-card *ngIf="!this.wyreActive" (click)="selectCoin('tether')" text-wrap>
           <ion-avatar item-start>
             <img src="../../assets/usdt.png">
@@ -44,7 +44,7 @@
           <p class="start">Tether <span>(USDT)</span></p>
           <!-- <p class="end">{{'method.select' | translate}}</p> -->
         </ion-card>
-        <ion-card *ngIf="this.wyreActive" (click)="selectCoin('dai')" text-wrap>
+        <ion-card (click)="selectCoin('dai')" text-wrap>
           <ion-avatar item-start>
             <img src="../../assets/dai.png">
           </ion-avatar>
