--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -40,15 +40,13 @@
                 formControlName="email"
                 type="email"
                 placeholder="Your email address"
-                [class.invalid]="!loginForm.controls['email'].valid &&
-                loginForm.controls['email'].touched"
+                [class.invalid]="!loginForm.controls['email'].valid"
               >
               </ion-input>
             </ion-item>
             <ion-item
               class="error-message"
-              *ngIf="!loginForm.controls['email'].valid &&
-                  loginForm.controls['email'].touched"
+              *ngIf="!loginForm.controls['email'].valid"
             >
               <ion-label>{{'login.please' | translate}}.</ion-label>
             </ion-item>
