update keys mgmt

--- a/src/app/method/method.component.html
+++ b/src/app/method/method.component.html
@@ -55,7 +55,7 @@
           <ion-avatar item-start>
             <img src="../../assets/usdc.png">
           </ion-avatar>
-          <p class="start">USD Coin <span>(USDC)</span></p>
+          <p class="start1">USD Coin <span>(USDC)</span></p>
           <!-- <p class="end">{{'method.select' | translate}}</p> -->
         </ion-card>
       </ion-col>
