--- a/src/app/method/method.component.scss
+++ b/src/app/method/method.component.scss
@@ -13,6 +13,13 @@ ion-avatar{
     color: #333333;
 }
 
+.start1{
+    float: left;
+    margin-top: 22px;
+    color: #333333;
+    font-size: 0.8em;
+}
+
 .end{
     float: right;
     margin-top: 22px;
@@ -32,7 +39,7 @@ p{
 }
 
 span{
-    font-size: 0.9em;
+    font-size: 0.8em;
 }
 
 ion-button{
