update profile and wyre

--- a/src/app/account/account.page.html
+++ b/src/app/account/account.page.html
@@ -8,13 +8,13 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-item (click)="updateEmail()" detail="true"> 
+  <!-- <ion-item (click)="updateEmail()" detail="true"> 
     <ion-label color="dark">
       <p class="input">Account Email</p>
       <ion-text>{{ this.email }}</ion-text>
       <ion-text>Enter new account email.</ion-text>
     </ion-label>
-  </ion-item>
+  </ion-item> -->
   <ion-item (click)="updatePassword()" detail="true"> 
     <ion-label color="dark">
       <p class="input">Change Password</p>
