--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -241,7 +241,7 @@
     <ion-item [routerLink]="['/account']" routerDirection="forward" detail="true">  
       <ion-label>
         <p class="input">Account Details</p>
-        <ion-text>Change username or password</ion-text>
+        <ion-text>Change Password</ion-text>
         <!-- <ion-text *ngIf="this.username === null || this.username === ''">Your unique username.</ion-text> -->
       </ion-label>
     </ion-item>
